# py-micro-template-service

./: .coverage  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
src/py_micro/service/: __init__.py  main.py  template_service.py
src/py_micro/service/config/: __init__.py  application_config.py  logging_config.py  repository_config.py  server_config.py
src/py_micro/service/containers/: __init__.py  application_container.py  repositories_container.py  services_container.py
src/py_micro/service/models/: __init__.py  health_check.py
src/py_micro/service/services/: __init__.py  template_service.py
src/py_micro/service/validators/: common.py
tests/: conftest.py
tests/integration/: test_integration.py  tmp_test_integration.py
tests/unit/: test_main.py  test_template_service.py  tmp_test_containers.py  tmp_test_main.py
tests/unit/config/: test_application_config.py  test_logging_config.py  test_server_config.py
tests/unit/config/validators/: test_common.py
tests/unit/containers/: test_application_container.py  test_services_container.py
tests/unit/services/: test_template_service.py
